--- a/1 - Feed Forward Propagation/feed_forward_propagation.ipynb
+++ b/1 - Feed Forward Propagation/feed_forward_propagation.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "source": [
     "#Stage 1\n",
-    "![IMG1](img1.png)\n",
+    "![IMG1](images/img1.png)\n",
     "#Stage 2\n",
-    "![IMG2](img2.png)\n",
+    "![IMG2](images/img2.png)\n",
     "#Stage 3\n",
-    "![IMG3](img3.png)\n"
+    "![IMG3](images/img3.png)\n"
    ],
    "metadata": {
     "collapsed": false
